Fixes a few layout issues on mobile devices

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -19,7 +19,7 @@
     background: white;
 
     @include mobile {
-      width: 200px;
+      width: 250px;
     }
 
     .links {
